--- a/Back-end/.env
+++ b/Back-end/.env
@@ -1,4 +1,4 @@
- MONGO_URI=mongodb://localhost:27017/user
-# MONGO_URI=mongodb://mongodb:27017/user
+ #MONGO_URI=mongodb://localhost:27017/user
+ MONGO_URI=mongodb://mongodb:27017/user
 PORT=3000
 SESSION_SECRET=andrianjafy23
